# Quant-Team

./: README.md
2025-Summer/: README.md
2025-Summer/ARIMA_Inflation_Forecast/: ARIMA_Inflation_Forecast.ipynb  README.md  requirements.txt
2025-Summer/Stock Analysis Dashboard/: requirements.txt
2025-Summer/Stock_Analysis_Dashboard/: README.md  Stock_Data_Analysis.py  pyproject.toml
2025-Winter/: README.md
