[project]
name = "stock-data-analysis"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pandas>=2.2.3",
    "numpy>=2.2.5",
    "yfinance>=0.2.61",
    "streamlit>=1.45.1",
    "ta-lib>=0.6.3",
    "lxml>=5.4.0",
    "datetime>=5.5",
]
